--- a/Dice-Game-Project/universerace7.html
+++ b/Dice-Game-Project/universerace7.html
@@ -7,6 +7,7 @@
 	<body>
 	<center>
 	<h1>DANGER ON VENUS!!!</h1>
+	<img src="6_venus_lightning_concept.jpg" width="470">
 	<p>Well, now you know what's below the clouds of Venus: a hot, rocky landscape where the surface pressure is 90 times greater than that of Earth. It's starting to warp your spacecraft!! There's no time to lose! Roll a 4 to get the heck outta here!</p>
 	<button onclick="rollTheDice()">Roll the Dice</button>
 	</center>
