--- a/Dice-Game-Project/universeracehome.html
+++ b/Dice-Game-Project/universeracehome.html
@@ -8,7 +8,7 @@
 	<center>
 	<h1><b>Earth</b></h1>
 	<img src="lroc_earth_20100809_th.jpg" width="470">
-	<h2>You're Home</h2>
+	<p>You're Home. WAY TO GO!!!! You've officially completed the Universe Race. You've become a little more wise in the ways of the worlds beyond....Want to do it again?<p>
 	<form method="link" action="universerace.html"><input type="submit" value="Play Again?"></form>
 	</center>
 	</body>
