--- a/Dice-Game-Project/universeracesuccessfulringpassage.html
+++ b/Dice-Game-Project/universeracesuccessfulringpassage.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 	<title>Race Across the Universe!</title>
-	<link rel="stylesheet" type="text/css" href="stylesheet.css">
+	<link rel="stylesheet" type="text/css" href="stylesheet3.css">
 	</head>
 	<body>
 	<center>
