--- a/Dice-Game-Project/universerace20.html
+++ b/Dice-Game-Project/universerace20.html
@@ -8,7 +8,7 @@
 	<center>
 	<h1>Uranus</h1>
 	<img src="New Moons around Uranus.jpg" width="470">
-	<p>No need to adjust your spacecraft's orientation. Your view meant to look that way. Uranus has an axis tilt of 98 degrees to the vertical. So, when you're flying by it like this, it looks like a bulls-eye with its faint rings surrounding it. It has 27 moons, was well, but other than that there's not much to see here. Let's move on.</p>
+	<p>No need to adjust your spacecraft's orientation. Your view meant to look that way. Uranus has an axis tilt of 98 degrees to the vertical. So, when you're flying by it like this, it looks like a bulls-eye with its faint rings surrounding it. It has 27 moons, as well, but other than that there's not much to see here. Let's move on.</p>
 	<form method="link" action="universerace21.html"><input type="submit" value="Passage to Neptune"></form>
 	</center>
 	</body>
