--- a/Dice-Game-Project/cometride.html
+++ b/Dice-Game-Project/cometride.html
@@ -2,13 +2,19 @@
 <html>
 	<head>
 	<title>Race Across the Universe!</title>
-	<link rel="stylesheet" type="text/css" href="stylesheet.css">
+	<link rel="stylesheet" type="text/css" href="stylesheet3.css">
 	</head>
 	<body>
 	<center>
 	<h1>Comet Rodeo</h1>
 	<img src="halley_giotto_big.jpg" width="470">
 	<p>Are ya ready, partner? You're about to hogtie a comet and ride it through space. A ride all the way along a comet's orbit would normally take upwards of 70 years, but we don't have that kind of time. Instead, see if you can just land and keep your spacecraft on the surface for 30 seconds. This can prove tricky, as comets have very low gravity. It all depends on your dice roll, partner!</p>
+	<table>
+	<tr><th>Roll</th><th>Destination</th></tr>
+	<tr><td>1 - 3</td><td>Try Harder</td></tr>
+	<tr><td>4 - 6</td><td>Ametuer Comet Rider</td></tr>
+	<tr><td>7 - 10</td><td>Comet Ridin' Pro</td></tr>
+	</table>
 	<button onclick="rollTheDice()">Roll the Dice</button>
 	</center>
 	<script type="text/javascript" src="cometride.js"></script>
