--- a/Dice-Game-Project/universerace8.html
+++ b/Dice-Game-Project/universerace8.html
@@ -9,6 +9,7 @@
 	<h1>Mars </h1>
 	<img src="PIA04304_modest.jpg" width="500">
 	<p>Ah, Mars: the Red Planet - a land of high volcanoes and a canyon that would reach from New York to L.A. Many robot spacecraft have pitted themselves against the extreme Martian climate to learn what this extraordinary planet is like. I could tell you all about their findings...or I could just make you land whether you like it or not! </p>
+	<p>Roll a 3 or higher to touchdown on Mars</p>
 	<button onclick="rollTheDice()">Roll the Dice</button>
 	</center>
 	<script type="text/javascript" src="universerace8.js"></script>
